Bug 56790 - [Bisected ILK]Oglc textureswizzle(advanced.shader.targets) fails
Summary: [Bisected ILK]Oglc textureswizzle(advanced.shader.targets) fails
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high major
Assignee: Kenneth Graunke
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-06 02:06 UTC by lu hua
Modified: 2012-11-19 02:36 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2012-11-06 02:06:42 UTC
System Environment:
--------------------------
Arch:             i386
Platform:         Ironlake
Libdrm:	(master)libdrm-2.4.39-22-ge32fff8e9ea8d522679eaab21a9555cab134fb36
Mesa:	(master)ccbfe3dde94cd50a4e6468cfeabf95c79c9d8072
Xserver:(master)xorg-server-1.13.0-107-ga194630f7f7b287cb4ea4a459df0745f4c0d4c1a
Xf86_video_intel:(master)2.20.12-25-ge62b0cbf958d1ad95e4522973253a1ae5c1a4da9
Cairo:	(master)fab6958eff35a94cf46e38f19a7e75e10aa2b182
Libva:	(staging)c59c512df262cdc44fb6e9101621f246eda176df
Libva_intel_driver:(staging)3bd6f3b3611dd9a39a3075f82cf938fa08e22884
Kernel:	(drm-intel-nightly) 030c686fe3b33b651883d58c1bb7b59e506968ce

Bug detailed description:
------------------------------
It fails on ironlake with mesa master branch.It doesn't happen on mesa 9.0 branch.

Bisect shows: 05882b0d3b69ac14e9bc93460c77f9dc203c2ff9 is the first bad commit.
commit 05882b0d3b69ac14e9bc93460c77f9dc203c2ff9
Author:     Kenneth Graunke <kenneth@whitecape.org>
AuthorDate: Thu Nov 1 22:04:50 2012 -0700
Commit:     Kenneth Graunke <kenneth@whitecape.org>
CommitDate: Sat Nov 3 20:28:57 2012 -0700

    i965/fs: Compact the virtual GRF arrays.

    During code generation, we create tons of temporary variables, many of
    which get immediately killed and are never used.  Later optimization and
    analysis passes, such as compute_live_intervals, loop over all the
    virtual GRFs.  By compacting them, we can save a lot of overhead.

    Reduces compilation time in L4D2's largest fragment shader from 10.2
    seconds to 5.2 seconds (50%).  Drops compute_live_variables() from
    10-12% of another game's startup time to 8%.

    Reviewed-by: Eric Anholt <eric@anholt.net>
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>


Visual Report:
ID      |ACCELERA|DB      |REND_T  |SURF_T  |C_BUF_T |BUF_S   |RED_S   |
     117|       1|       1|      gl|  wipbpx|    rgba|      32|       8|

GREEN_S |BLUE_S  |ALPHA_S |DEPTH_S |STENC_S |ACCUM_S |SPL_BUF |SAMPLES |
       8|       8|       8|      24|       8|      64|       0|       0|

SRGB    |TEX_RGB |TEX_RGBA|CAVEAT  |SWAP    |M_PBUF_W|M_PBUF_H|M_PBUF_P
       0|       0|       0|    slow|   undef|       0|       0|       0

Reproduce steps:
----------------------------
1. start x
2. ./oglconform -z -suite all -v 2 -D 117 -test textureswizzle \ advanced.shader.targets
Comment 1 Pavel Ondračka 2012-11-10 15:55:25 UTC
This commit also regressed glean texCombine and piglit glsl-fs-lots-of-tex tests on my GM45.
Comment 2 Kenneth Graunke 2012-11-15 06:47:02 UTC
Patch on mailing list:
http://lists.freedesktop.org/archives/mesa-dev/2012-November/030098.html
Comment 3 Eric Anholt 2012-11-18 18:13:10 UTC
commit 5cea0273414bd5897c318b4d632b08ce8080a2fe
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Wed Nov 14 20:50:05 2012 -0800

    i965/fs: Properly patch special values during VGRF compaction.
Comment 4 lu hua 2012-11-19 02:36:14 UTC
Verified. Fixed by commit 5cea0273414bd5897c318b4d632b08ce8080a2fe.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.